@@ -3,15 +3,23 @@ package org.example.shoppingweb.security;
 import org.example.shoppingweb.entity.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Map;
 
-public class CustomUserDetails implements UserDetails {
+public class CustomUserDetails implements UserDetails, OAuth2User {
     private final User user;
+    private Map<String, Object> attributes; // cho OAuth2
 
     public CustomUserDetails(User user) {
         this.user = user;
+    }
+
+    public CustomUserDetails(User user, Map<String, Object> attributes) {
+        this.user = user;
+        this.attributes = attributes;
     }
 
     public User getUser() {
@@ -20,8 +28,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Nếu cần phân quyền: return List.of(new SimpleGrantedAuthority(user.getRole().getRoleName()));
-        return Collections.emptyList();
+        return Collections.emptyList(); // sửa nếu cần phân quyền
     }
 
     @Override
@@ -52,5 +59,16 @@ public class CustomUserDetails implements UserDetails {
     @Override
     public boolean isEnabled() {
         return true;
+    }
+
+    // Các phương thức của OAuth2User
+    @Override
+    public Map<String, Object> getAttributes() {
+        return attributes;
+    }
+
+    @Override
+    public String getName() {
+        return user.getFullName(); // hoặc user.getId().toString()
     }
 }
